# test-agentic

./: .gitignore  README.md  env.yml  gitquick_dummy.txt  gitquick_full_test.sh  pyproject.toml
agents/db/: chroma.sqlite3
agents/src/testing_crew/: crew.py  main.py
archive/: main.py  streamlit_app.py
backend/: .env  config.py  database.py  main.py  models.py  requirements.txt
data/raw/: crm_general.xlsx
data/sale/: crm_transcript.txt
db/: chroma.sqlite3
docs/client/finance/: finance.md
docs/client/hr/: hr.md
docs/client/inv/: inv.md
docs/client/manufacturing/: manufacturing.md
docs/client/operations/: operations.md
docs/client/procurement/: procurement.md
docs/crewai/: 3. Core - Agents.md
docs/self/: models.md  mvp.md  v1.1.md
docs/z_doc/: 1. Get Started - Installation.md  1. Get Started - Introduction.md  1. Get Started - Quickstart.md  2. Guide - Advanced: Customizing Prompts.md  2. Guide - Advanced: Fingerprinting.md  2. Guide - Agents.md  2. Guide - Flows: Building Your First Flow .md  2. Guide - Flows: Mastering Flow State.md  2. Guide - Strategy.md  3. Core - Crews.md  6. Observability - AgentOps.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css
frontend/components/: chat-input.tsx  chat-window.tsx  message-bubble.tsx  sidebar.tsx
mvp/: package-lock.json  package.json  tailwind.config.ts
mvp/app/: page.tsx
mvp/components/: icons.tsx  message-list.tsx  sidebar.tsx
src/testing_crew/: crew.py  main.py
z_doc/: 2. Guide - Crews.md  3. Core - LLMs.md
(+16 files in other folders)
