[project]
name = "testing_crew"
version = "0.1.0"
description = "testing-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
testing_crew = "testing_crew.main:run"
run_crew = "testing_crew.main:run"
train = "testing_crew.main:train"
replay = "testing_crew.main:replay"
test = "testing_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
